# agentic-RAG

./: .gitignore  README.md  pyproject.toml  run_all.bat  run_all.sh  start_api.bat  start_api.sh  start_streamlit.bat  start_streamlit.sh  stop_services.bat  stop_services.sh
app/: main.py
pipeline/: agentic_rag.py  agentic_rag_v2.py
serving_api/: main.py  main_v2.py
